[package]
name = "eetf"
version = "0.8.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Library for encoding/decoding Erlang External Term Format"
documentation = "https://docs.rs/eetf"
homepage = "https://github.com/sile/eetf"
repository = "https://github.com/sile/eetf"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/eetf"}

[dependencies]
num = "0.4"
byteorder = "1"
libflate = "1"
ordered-float = "2"
thiserror = "1"
tokio = { version = "1.32.0", features = ["io-util"], optional = true}
async-recursion = "1.0.5"

[features]
# Defines a feature named `webp` that does not enable any other features.
tokio-async = ["dep:tokio"]
